--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
                 <li>私有链与铭文碎片技术: 确保交易安全性和完全透明性</li>
                 <li>24小时全天候交易，无资金池，智能合约</li>
                 <li>去中心化跨链闪兑任意币种，无需钱包和私钥</li>
-                <li>联合坐庄：DSC/SCC可闪兑主流币，挖DSC就是挖主流币（近期上线）<li>
+                <li>联合坐庄：DSC/SCC可闪兑主流币，挖DSC就是挖主流币（近期上线）</li>
             </ul>
         </div>
         
