更新 xueyuan.html

--- a/xueyuan.html
+++ b/xueyuan.html
@@ -367,16 +367,34 @@
                         <span class="video-duration">02:45</span>
                     </div>
                 </div>
+                <!-- 新增加的闪兑教程视频 -->
                 <div class="video-card">
                     <div class="video-wrapper" data-video-num="6"
+                         data-cloudflare="https://pub-19bc0ce8c8524750be48dcbb7ca04a73.r2.dev/lv_0_20260117220439.mp4"
+                         data-github="https://pub-19bc0ce8c8524750be48dcbb7ca04a73.r2.dev/lv_0_20260117220439.mp4">
+                        <img class="video-cover" src="" alt="数字卷轴DSC闪兑教程" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="cover-fallback" style="display: none;">数字卷轴DSC闪兑教程</div>
+                        <div class="play-button"><i class="fas fa-play-circle"></i></div>
+                        <div class="loading" id="loading6"><i class="fas fa-spinner fa-spin"></i><br>视频加载中...</div>
+                        <div class="error-message" id="error6"></div>
+                        <div class="video-source-indicator" id="sourceIndicator6">Cloudflare源</div>
+                    </div>
+                    <div class="video-title">
+                        <span>数字卷轴DSC闪兑教程</span>
+                        <span class="video-duration">02:30</span>
+                    </div>
+                </div>
+                <!-- 原来的激励视频，序号更新为7 -->
+                <div class="video-card">
+                    <div class="video-wrapper" data-video-num="7"
                          data-cloudflare="https://pub-19bc0ce8c8524750be48dcbb7ca04a73.r2.dev/06.mp4"
                          data-github="https://raw.githubusercontent.com/boipc/Digital-Scroll/main/06.mp4">
                         <img class="video-cover" src="https://embed.wave.video/8Xv4qeUUZca7Dcgm/preview.jpg?width=1080&height=1920" alt="数字卷轴DSC激励操作" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="cover-fallback" style="display: none;">数字卷轴DSC激励操作</div>
                         <div class="play-button"><i class="fas fa-play-circle"></i></div>
-                        <div class="loading" id="loading6"><i class="fas fa-spinner fa-spin"></i><br>视频加载中...</div>
-                        <div class="error-message" id="error6"></div>
-                        <div class="video-source-indicator" id="sourceIndicator6">Cloudflare源</div>
+                        <div class="loading" id="loading7"><i class="fas fa-spinner fa-spin"></i><br>视频加载中...</div>
+                        <div class="error-message" id="error7"></div>
+                        <div class="video-source-indicator" id="sourceIndicator7">Cloudflare源</div>
                     </div>
                     <div class="video-title">
                         <span>数字卷轴DSC激励</span>
