--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
             </div>
             
             <!-- 横幅按钮 - 修改后的版本 -->
-            <a href="bossa.html" class="banner-button">
+            <a href="bosaidong.html" class="banner-button">
                 <div class="banner-text">
                     <div class="main-text">2026数字卷轴全球升级波塞冬链</div>
                     <div class="sub-text">全球预告发布</div>
